--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
     "owl.carousel": "^2.3.4",
-    "popper.js": "^1.14.3"
+    "popper.js": "^1.14.3",
+    "yarn": "^1.17.3"
   }
 }
