--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "jquery": "^3.3.1",
+    "js-datepicker": "^5.0.2",
     "owl.carousel": "^2.3.4",
     "popper.js": "^1.14.3",
     "yarn": "^1.17.3"
